<resources>
    <string name="app_name">[NAME]</string>
    <string name="google_maps_key">AIzaSyBBUQoC7iOBfimQbmNR-O8PBzsMJUODBz8</string>
    <string name="ip">[IP]</string>
    <string name="support_email">[EMAIL]</string>
    <string name="https_on">[HTTPS]</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiemdpbnRhc3oiLCJhIjoiY2lqeXRtODNiMDA0bnc1a3BkYmlpcWZwcSJ9.Y5ju8gvMf0nfuhynOSmc2g</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="wrongLogin">E-mail or password is incorrect!</string>
    <string name="logout">LOGOUT</string>
    <string name="welcome">Welcome</string>
    <string name="dashboardHint"><![CDATA[Use the dashboard to quickly access the most important data & settings]]></string>
    <string name="map">Map</string>
    <string name="objects">Objects</string>
    <string name="events">Events</string>
    <string name="history">History</string>
    <string name="tools">Tools</string>
    <string name="setup">Setup</string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="addNewDevice">Add new device</string>
    <string name="errorHappened">Error happened!</string>
    <string name="altitude">Altitude</string>
    <string name="protocol">Protocol</string>
    <string name="driver">Driver</string>
    <string name="position">Position</string>
    <string name="main">Main</string>
    <string name="icon">Icon</string>
    <string name="advanced">Advanced</string>
    <string name="sensors">Sensors</string>
    <string name="addSensor">Add sensor</string>
    <string name="saveChanges">Save changes</string>
    <string name="name">Name</string>
    <string name="imei">IMEI</string>
    <string name="clearData">Clear data</string>
    <string name="myAccount">My account</string>
    <string name="support">Support</string>
    <string name="general">General</string>
    <string name="driverInformation">Driver\'s information</string>
    <string name="location">Location</string>
    <string name="object">Object</string>
    <string name="model">Model</string>
    <string name="plate">Plate</string>
    <string name="odometer">Odometer</string>
    <string name="gpsDevice">GPS device</string>
    <string name="rfid">RFID</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="writeYourMessage">Write your message</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="needHelp">Need help?</string>
    <string name="belowNeedHelp">Our extensive knowledge base and support team are ready to help you!</string>
    <string name="getSupport">Get support</string>
    <string name="membership">Membership</string>
    <string name="changePassword">Change password</string>
    <string name="changeMembership">Change membership</string>
    <string name="devicesLimit">Devices limit</string>
    <string name="expirationDate">Expiration date</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="change">Change</string>
    <string name="reports">Reports</string>
    <string name="createNewReport">Create a new report</string>
    <string name="newReport">New report</string>
    <string name="saveReport">Save the report</string>
    <string name="format">Format</string>
    <string name="devices">Devices</string>
    <string name="geofences">Geofences</string>
    <string name="schedule">Schedule</string>
    <string name="no">No</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="alerts">Alerts</string>
    <string name="geofencing">Geofencing</string>
    <string name="ruler">Ruler</string>
    <string name="poi">POI</string>
    <string name="showPoint">Show point</string>
    <string name="editReport">Edit report</string>
    <string name="report">Report</string>
    <string name="timePeriod">Time period</string>
    <string name="filter">Filter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="stops">Stops</string>
    <string name="done">Done</string>
    <string name="selectDevices">Select devices</string>
    <string name="sendEmail">Send email with...</string>
    <string name="simNo">SIM no.</string>
    <string name="group">Group</string>
    <string name="measurement">Measurement</string>
    <string name="kmPerLiter">Km per 1 liter</string>
    <string name="costForLiter">Cost for 1 liter</string>
    <string name="saved">Saved!</string>
    <string name="timeAdjustment">Time adjustment:</string>
    <string name="inputCustom">Input custom:</string>
    <string name="custom">Custom</string>
    <string name="continuestr">Continue</string>
    <string name="accuracy">Accuracy</string>
    <string name="tail">Tail</string>
    <string name="minMovingSpeedKmh">Min. moving speed in km/h</string>
    <string name="minFuelDifferenceFillings">Min. fuel difference to detect fuel fillings</string>
    <string name="minFuelDifferenceTheft">Min. fuel difference to detect fuel thefts</string>
    <string name="tailColor">Tail color</string>
    <string name="tailLength">Tail length (0-10 last points)</string>
    <string name="deviceModel">Device model</string>
    <string name="plateNumber">Plate number</string>
    <string name="vin">VIN</string>
    <string name="registrationAssetNumber">Registration/asset number</string>
    <string name="objectOwnerManager">Object owner/manager</string>
    <string name="nameMustBeSet">Name must be set!</string>
    <string name="imeiMustBeSet">IMEI must be set!</string>
    <string name="clearAllEvents">Clear all events</string>
    <string name="openBrowser">Open browser</string>
    <string name="objectGroups">Object groups</string>
    <string name="drivers">Drivers</string>
    <string name="sms">SMS</string>
    <string name="units_of_distance">Units of distance</string>
    <string name="units_of_capacity">Units of capacity</string>
    <string name="units_of_altitude">Units of altitude</string>
    <string name="timezone">Timezone</string>
    <string name="add_new">Add new</string>
    <string name="device">Device</string>
    <string name="sms_gateway">SMS gateway</string>
    <string name="sms_templates">SMS templates</string>
    <string name="gprsTemplates">GPRS templates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="yourPoint">Your point</string>
    <string name="addEvent">Add event</string>
    <string name="parameters">Parameters</string>
    <string name="showAlways">Show always</string>
    <string name="enableSmsGateway">Enable SMS gateway</string>
    <string name="requestMethod">Request method</string>
    <string name="authentication">Authentication</string>
    <string name="smsGateway_sometext"><![CDATA[Variables: %NUMBER%, %MESSAGE%.\n\n
SMS gateway URL example: http://SMS_GATEWAY/sendsms.php?username=USER&password=PASSWORD&number=%NUMBER%&message=%MESSAGE%]]></string>
    <string name="smsGatewayUrl">SMS gateway url:</string>
    <string name="sendTestSms">Send test SMS</string>
    <string name="addNewSmsTemplate">Add new SMS template</string>
    <string name="message">Message</string>
    <string name="addNewGprsTemplate">Add new GPRS template</string>
    <string name="titleFieldRequired">Title field is required!</string>
    <string name="messageFieldRequired">Message field is required!</string>
    <string name="sendCommand">Send command</string>
    <string name="gprs">GPRS</string>
    <string name="smsTemplate">SMS template</string>
    <string name="smsTemplateHint"><![CDATA[\"SMS template\" can be added at: Setup->SMS templates]]></string>
    <string name="search">Search</string>
    <string name="statistics">Statistics</string>
    <string name="encoding">Encoding</string>
    <string name="clearQueue">Clear queue</string>
    <string name="smsGatewayAppInfo" formatted="false"><![CDATA[SMS in the queue: %d\nApp last connection: %s\nIf sms gateway app don\'t send sms in 24h it will be deleted from the queue.]]></string>
    <string name="username">Username</string>
    <string name="phoneNumber">Phone number</string>
    <string name="testSmsSent">Test sms sent!</string>
    <string name="addDriver">Add driver</string>
    <string name="userDriverAdded">Driver added!</string>
    <string name="invalidEmail">Invalid email!</string>
    <string name="addCustomEvent">Add custom event</string>
    <string name="conditions">Conditions:</string>
    <string name="addCondition">Add condition</string>
    <string name="parameter">Parameter</string>
    <string name="value">Value</string>
    <string name="addMarker">Add marker</string>
    <string name="addPOIMarker">Add POI marker</string>
    <string name="setMarkerLocation">Set marker location</string>
    <string name="set_data">Set data</string>
    <string name="poiMarkerAdded">Marker successfuly added!</string>
    <string name="locationRequired">Location is required!</string>
    <string name="rulerDistance">Distance: %.2fkm</string>
    <string name="clickOnMap">Click on the map!</string>
    <string name="gprsCommandSent">GPRS command sent!</string>
    <string name="smsCommandSent">SMS command sent!</string>
    <string name="addGeofence">Add geofence</string>
    <string name="drawPolygon">Draw polygon</string>
    <string name="bgcolor">Background color</string>
    <string name="cantClosePolygon">Too less points to close a polygon!</string>
    <string name="polygonIsntClosed">Polygon is not closed!</string>
    <string name="bgcolorMustBeSet">Background color must be set!</string>
    <string name="geofenceAdded">Geofence successfully added!</string>
    <string name="noPolygonData">No polygon data!</string>
    <string name="addAlert">Add alert</string>
    <string name="saveAlert">Save alert</string>
    <string name="overspeed">Overspeed</string>
    <string name="userInfo">User info</string>
    <string name="separatePhoneBySemicolonHint">For multiple mobile phones separate them via semicolon ex.: +440000000000;+440000000001</string>
    <string name="separateEmailBySemicolonHint">For multiple emails separate them via semicolon ex.: user@example.com;user1@example.com</string>
    <string name="add">Add</string>
    <string name="customEventsHint"><![CDATA[Custom events can be defined at Setup->Events tab.]]></string>
    <string name="eventAdded">Event successfully added!</string>
    <string name="eventSaved">Event successfully saved!</string>
    <string name="selectDateTime"><![CDATA[Select date & time]]></string>
    <string name="set">Set</string>
    <string name="newReportAdded">Report successfully added!</string>
    <string name="selectGeofences">Select geofences</string>
    <string name="reportSaved">Report saved!</string>
    <string name="mustSelectMinOneDevice">You must select at least one device!</string>
    <string name="mustSelectMinOneGeofence">You must select at least one geofence!</string>
    <string name="historyLog">History log</string>
    <string name="statisticsGraph">Statistics graph</string>
    <string name="dataLog">Data log</string>
    <string name="speed">Speed</string>
    <string name="unknown">Unknown</string>
    <string name="noData">No data!</string>
    <string name="noHistoryData">No history data! Please select another device or a different time interval</string>
    <string name="noAlertsData">No alerts data!</string>
    <string name="noGeofencingData">No geofencing data!</string>
    <string name="noReportsData">No reports data!</string>
</resources>