<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingBottom="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shadow_top"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/group"
            android:textColor="#636363"
            android:background="@drawable/preference_name"/>
        <Spinner
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/preference_right"
            android:textColor="#666666"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/simNo"
            android:textColor="#636363"
            android:background="@drawable/preference_name"/>
        <EditText
            android:id="@+id/simNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/preference_right"
            android:textColor="#666666"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/deviceModel"
            android:textColor="#636363"
            android:background="@drawable/preference_name"/>
        <EditText
            android:id="@+id/deviceModel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/preference_right"
            android:textColor="#666666"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/plateNumber"
            android:textColor="#636363"
            android:background="@drawable/preference_name"/>
        <EditText
            android:id="@+id/plateNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/preference_right"
            android:textColor="#666666"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/vin"
            android:textColor="#636363"
            android:background="@drawable/preference_name"/>
        <EditText
            android:id="@+id/vin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/preference_right"
            android:textColor="#666666"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/registrationAssetNumber"
            android:textColor="#636363"
            android:background="@drawable/preference_name"/>
        <EditText
            android:id="@+id/registrationAssetNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/preference_right"
            android:textColor="#666666"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/objectOwnerManager"
            android:textColor="#636363"
            android:background="@drawable/preference_name"/>
        <EditText
            android:id="@+id/objectOwnerManager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/preference_right"
            android:textColor="#666666"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/measurement"
            android:textColor="#636363"
            android:background="@drawable/preference_name"/>
        <Spinner
            android:id="@+id/measurement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/preference_right"
            android:textColor="#666666"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/kmPerLiter"
            android:textColor="#636363"
            android:background="@drawable/preference_name"/>
        <EditText
            android:id="@+id/kmPerLiter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/preference_right"
            android:textColor="#666666"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="numberSigned"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/costForLiter"
            android:textColor="#636363"
            android:background="@drawable/preference_name"/>
        <EditText
            android:id="@+id/costForLiter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/preference_right"
            android:textColor="#666666"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="numberSigned"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/timeAdjustment"
            android:textColor="#636363"
            android:background="@drawable/preference_name"/>
        <Spinner
            android:id="@+id/timeAdjustment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/preference_right"
            android:textColor="#666666"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

</LinearLayout>