<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shadow_top"
        android:scaleType="fitXY"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:gravity="center_vertical"
            android:id="@+id/textView2"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:background="@drawable/darkinput"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:paddingRight="10dp"
            android:paddingBottom="2dp"
            android:layout_marginLeft="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:gravity="center_vertical"
            android:id="@+id/textView3"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:background="@drawable/darkinput"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:paddingRight="10dp"
            android:paddingBottom="2dp"
            android:layout_marginLeft="10dp"
            android:inputType="textEmailAddress"/>

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/separateEmailBySemicolonHint"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:text="@string/phone"
            android:gravity="center_vertical"
            android:id="@+id/textView4"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4"
            android:background="@drawable/darkinput"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:paddingRight="10dp"
            android:paddingBottom="2dp"
            android:layout_marginLeft="10dp"
            android:inputType="phone"/>

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/separatePhoneBySemicolonHint"/>

</LinearLayout>