<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff"
              android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/shadow_top"/>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2"
        android:layout_below="@id/shadow"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <Button
            android:id="@+id/daily"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/daily"
            android:background="@drawable/button_selectable_left_unselected"
            android:textColor="#666666"/>
        <Button
            android:id="@+id/weekly"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/weekly"
            android:background="@drawable/button_selectable_right_unselected"
            android:textColor="#666666"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/textView"
        android:background="@drawable/preference_name"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@id/buttonsLayout"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@id/buttonsLayout"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:background="@drawable/preference_right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#666666"
        android:textSize="14sp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>

</RelativeLayout>